--- a/style.css
+++ b/style.css
@@ -16,3 +16,61 @@ a:hover {
   text-decoration: underline #f72210;
   color: inherit;
 }
+
+.vs {
+  text-align: center;
+  align-self: center;
+  background-color: black;
+  border-radius: 50%;
+  color: white;
+  padding: 5px;
+}
+
+/* header styles */
+
+.blog-header {
+  background-color: #f72210;
+  color: white;
+}
+
+.blog-header-logo {
+  font-size: 40px;
+}
+
+.login-btn {
+  color: white;
+  border: none;
+  font: bold 13px/24px "Roboto Condensed", sans-serif;
+  font-size: 18px;
+  line-height: 30px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-top: 4px;
+  margin-bottom: 4px;
+}
+
+.login-btn:hover {
+  background-color: inherit;
+}
+
+.subscribe-btn {
+  margin-right: 14px;
+  margin-left: 10px;
+  font-size: 18px;
+  line-height: 30px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-top: 4px;
+  margin-bottom: 4px;
+  background-color: #ffe400;
+  color: black;
+  border-radius: 24px;
+  display: flex;
+  align-items: center;
+}
+
+.subscribe-btn:hover {
+  color: black !important;
+  background-color: #ffe400;
+  text-decoration: none;
+}
