--- a/style.css
+++ b/style.css
@@ -17,15 +17,6 @@ a:hover {
   color: inherit;
 }
 
-.vs {
-  text-align: center;
-  align-self: center;
-  background-color: black;
-  border-radius: 50%;
-  color: white;
-  padding: 5px;
-}
-
 /* header styles */
 
 .blog-header {
@@ -34,7 +25,7 @@ a:hover {
 }
 
 .blog-header-logo {
-  font-size: 40px;
+  font-size: 52px;
 }
 
 .login-btn {
@@ -73,4 +64,38 @@ a:hover {
   color: black !important;
   background-color: #ffe400;
   text-decoration: none;
+}
+
+.date-widget {
+  color: white;
+}
+
+/* other styles */
+
+.vs {
+  text-align: center;
+  align-self: center;
+  background-color: black;
+  border-radius: 50%;
+  color: white;
+  padding: 5px;
+  border: 1px solid black;
+}
+
+/* footer styles */
+footer {
+  align-content: center;
+  justify-content: center;
+  margin-top: 10px;
+}
+
+.brand {
+  color: #f72210;
+  padding-right: 5px;
+  font-size: 36px;
+}
+
+.copyright {
+  align-content: center;
+  justify-content: center;
 }
